@@ -16,7 +16,7 @@ use strict;
 # Data Section
 # ************************************************************
 
-my($version) = '3.1';
+my($version) = '3.1.1';
 
 # ************************************************************
 # Subroutine Section
